--- a/bomba.ipynb
+++ b/bomba.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "93b17911",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,8 @@
     "random.seed(SEED)\n",
     "np.random.seed(SEED)\n",
     "torch.manual_seed(SEED)\n",
-    "DATA_DIR = '/kaggle/input/datasets/sottnik/profi-region/grabbed'"
+    "DATA_DIR_LEFT = '/kaggle/input/datasets/sottnik/test-profi/grabbed(left)/grabbed'\n",
+    "DATA_DIR_RIGHT = '/kaggle/input/datasets/sottnik/test-profi/grabbed(right)/grabbed'"
    ]
   },
   {
@@ -101,21 +102,23 @@
     "## 1. Загрузка данных\n",
     "\n",
     "### Разархивация и источник данных\n",
-    "Исходный набор данных получен в виде архива (zip), содержащего директорию `grabbed/` с HTML-файлами. Архив был разархивирован и загружен в полном объёме на платформу Kaggle.\n",
+    "Исходный набор данных получен в виде архива (zip) объёмом 117.74 МБ. После разархивации данные разделены на две директории: `grabbed(left)/grabbed` и `grabbed(right)/grabbed`, каждая из которых содержит HTML-файлы из реестра баз данных Роспатента. Архив разархивирован в полном объёме на платформе Kaggle — все файлы извлечены без потерь.\n",
     "\n",
     "### Техника выгрузки данных\n",
     "Каждая HTML-страница представляет собой запись из реестра баз данных сайта Роспатента. Файлы закодированы в windows-1251. Выгрузка данных выполняется следующим образом:\n",
-    "1. Считываем файл в бинарном режиме (`rb`) для корректной работы с кодировкой\n",
-    "2. Декодируем содержимое из windows-1251 в UTF-8\n",
-    "3. Разбираем HTML-разметку с помощью BeautifulSoup, извлекаем чистый текст\n",
-    "4. Из текста по ключевым маркерам (`Название базы данных`, `Реферат`) вырезаем нужные поля\n",
-    "5. Файлы с рефератом короче 20 символов отбрасываются как невалидные\n",
+    "1. Считываем списки файлов из обеих директорий (`grabbed(left)` и `grabbed(right)`)\n",
+    "2. Считываем каждый файл в бинарном режиме (`rb`) для корректной работы с кодировкой\n",
+    "3. Декодируем содержимое из windows-1251 в UTF-8\n",
+    "4. Разбираем HTML-разметку с помощью BeautifulSoup, извлекаем чистый текст\n",
+    "5. Из текста по ключевым маркерам (`Название базы данных`, `Реферат`) вырезаем нужные поля\n",
+    "6. Файлы с рефератом короче 20 символов отбрасываются как невалидные\n",
+    "7. Объединяем данные из двух папок, проверяем на дубликаты и формируем единый DataFrame\n",
     "\n",
     "### Описание выгруженных данных\n",
     "Из каждой страницы извлекаются два текстовых поля:\n",
-    "- **filename** — имя исходного HTML-файла\n",
-    "- **title** — название базы данных\n",
-    "- **referat** — реферат базы данных\n",
+    "- **filename** — имя исходного HTML-файла (идентификатор записи)\n",
+    "- **title** — название базы данных (от маркера «Название базы данных» до маркера «Реферат»)\n",
+    "- **referat** — реферат базы данных (от маркера «Реферат» до маркера «Номер регистрации» или «Вид и версия»)\n",
     "\n",
     "Остальные поля (авторы, правообладатель и т.д.) являются метаданными и для классификации не используются, потому что они не несут никакой полезной информации для классификатора."
    ]
@@ -135,10 +138,12 @@
     }
    ],
    "source": [
-    "# формируем список HTML-файлов в директории с данными\n",
-    "files = sorted(os.listdir(DATA_DIR))\n",
-    "files = [f for f in files if f.endswith('.html')]\n",
-    "print(f'Найдено файлов: {len(files)}')"
+    "# считываем файлы из обеих папок\n",
+    "files_left = sorted([f for f in os.listdir(DATA_DIR_LEFT) if f.endswith('.html')])\n",
+    "files_right = sorted([f for f in os.listdir(DATA_DIR_RIGHT) if f.endswith('.html')])\n",
+    "print(f'Файлов в grabbed(left):  {len(files_left)}')\n",
+    "print(f'Файлов в grabbed(right): {len(files_right)}')\n",
+    "print(f'Всего файлов:            {len(files_left) + len(files_right)}')"
    ]
   },
   {
@@ -146,7 +151,7 @@
    "id": "75bbb291",
    "metadata": {},
    "source": [
-    "Каждый файл необходимо открыть, разобрать HTML-разметку и извлечь нужные поля по ключевым словам. Для ускорения используется `ThreadPoolExecutor` — параллельная загрузка работает значительно быстрее последовательного чтения."
+    "Каждый файл необходимо открыть, разобрать HTML-разметку и извлечь нужные поля по ключевым словам. Для ускорения используется `ThreadPoolExecutor` — параллельная загрузка работает значительно быстрее последовательного чтения. Файлы из двух папок парсятся раздельно, затем объединяются."
    ]
   },
   {
@@ -245,9 +250,10 @@
     }
    ],
    "source": [
-    "def parse_file(fname):\n",
+    "def parse_file(args):\n",
     "    # разбирает один HTML-файл и возвращает словарь с извлечёнными полями (или None при ошибке)\n",
-    "    path = os.path.join(DATA_DIR, fname)\n",
+    "    data_dir, fname = args\n",
+    "    path = os.path.join(data_dir, fname)\n",
     "    with open(path, 'rb') as f:\n",
     "        raw = f.read()\n",
     "    try:\n",
@@ -276,15 +282,41 @@
     "        return None\n",
     "    return {'filename': fname, 'title': title, 'referat': referat}\n",
     "\n",
-    "# параллельная загрузка файлов в 8 потоков\n",
+    "# параллельная загрузка файлов из обеих папок\n",
+    "tasks_left = [(DATA_DIR_LEFT, f) for f in files_left]\n",
+    "tasks_right = [(DATA_DIR_RIGHT, f) for f in files_right]\n",
+    "\n",
     "with ThreadPoolExecutor(max_workers=8) as pool:\n",
-    "    results = list(pool.map(parse_file, files))\n",
+    "    results_left = list(pool.map(parse_file, tasks_left))\n",
+    "    results_right = list(pool.map(parse_file, tasks_right))\n",
     "\n",
-    "records = [r for r in results if r is not None]\n",
-    "skipped = len(files) - len(records)\n",
+    "records_left = [r for r in results_left if r is not None]\n",
+    "records_right = [r for r in results_right if r is not None]\n",
     "\n",
-    "df = pd.DataFrame(records)\n",
-    "print(f'Распаршено: {len(df)}, пропущено: {skipped}')\n",
+    "df_left = pd.DataFrame(records_left)\n",
+    "df_right = pd.DataFrame(records_right)\n",
+    "print(f'Распаршено из grabbed(left):  {len(df_left)}')\n",
+    "print(f'Распаршено из grabbed(right): {len(df_right)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d31d9c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# объединяем данные из двух папок\n",
+    "df = pd.concat([df_left, df_right], ignore_index=True)\n",
+    "print(f'После объединения: {len(df)} записей')\n",
+    "\n",
+    "# проверяем дубликаты по имени файла (пересечение между папками)\n",
+    "dupes_filename = df.duplicated(subset='filename', keep='first').sum()\n",
+    "print(f'Дубликатов по filename: {dupes_filename}')\n",
+    "\n",
+    "# удаляем дубликаты по имени файла (если один файл есть в обеих папках)\n",
+    "df = df.drop_duplicates(subset='filename', keep='first').reset_index(drop=True)\n",
+    "print(f'После удаления дубликатов: {len(df)} записей')\n",
     "df.head()"
    ]
   },
